--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,17 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>HiT shop</title>
+    <title>Резюме страница - Islom Jalilov</title>
+    <meta name="description" content="Личный сайт Ислама Джалилова, культурного критика и блогера из Андидана.">
+    <meta name="keywords" content="Ислам Джалилов, культурный критик, блогер, Андидан , Islom Jalilov, culture critic, blogger, Andijan , Islom Jalilov, культурный критик, блогер, Андидан ,islom jalilov, culture critic, blogger, andijan , Islom jalilov">
+    <meta name="author" content="Your icelink">
+    <link rel="canonical" href="https://icelink.uz">
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Личный сайт Ислама Джалилова, культурного критика и блогера из Андидана.">
+    <meta property="og:description" content="Личный сайт Ислама Джалилова, культурного критика и блогера из Андидана.">
+    <meta property="og:image" content="/static/media/islom-logo.52cefaffb132efd91e9f.jpg">
+    <meta property="og:url" content="https://icelink.uz">
+    <meta property="og:type" content="website">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
